Feat: Add Payement Service

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,4 +158,13 @@
   .section-description {
     @apply text-muted-foreground text-base;
   }
+
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
